2003-01-03  Ludovic Marcotte <ludovic@Sophos.ca>

        * Source/NSOutlineView.m: Started to fix the DnD code.
          Modified -mouseDown: to not select the row when clicking
          only on the expand/collapse image. Rewrote
          -noteNumberOfRowsChanged to correctly restore the list
          of selected rows after an expand/collapse operation.
          Also did some general cleanups. More to come on this class.

2004-01-03 19:00  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Source/NSBundleAdditions.m: Removed some uneeded includes.

2004-01-01 23:22  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Source/NSBundleAdditions.m: Moved the declaration of 
	nibitems in loadNibFile:externalNameTable:withZone: so
	that it can be released if there is an exception.
	* Source/NSActionCell.m: Documentation.
	* Source/NSScreen.m: Documentation.
	
2003-12-31 01:07  Alexander Malmberg <alexander@malmberg.org>

	* KeyBindings/DefaultKeyBindings.dict: Uncomment the
	moveUpAndModifySelection: and moveDownAndModifySelection:
	entries.

2003-12-31 00:37  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView.m (-setSelectedRange:affinity:stillSelecting:):
	Make sure oldRange is always initialized.

2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBundleAdditions.m (-pathForNibResource:) ignore
	extension "nib", so "gorm" or "gmodel" get used instead.

2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSAffineTransform.h: Corrected element names tX
	and TY of structure NSAffineTransformStruct to fit Cocoa naming.
	* Source/NSAffineTransform.m
	* Source/NSView.m (-_rebuildCoordinates)
	* Source/NSPrintOperation.m (-_displayPageInRect:atPlacement:withInfo:)
	Adopted to change of NSAffineTransformStruct elements.
	* Source/Function.m
	Implemented NSDrawWindowBackground(), NSDrawDarkBezel() and
	NSDrawLightBezel().
	* Source/NSTableHeaderView.m (-drawRect:) Use NSDrawTiledRects()
	instead of DPS operations.
