@@ -25,8 +25,6 @@
    59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 */ 
 
-#include <Foundation/NSClassDescription.h>
-#include <Foundation/NSArchiver.h>
 #include <Foundation/NSArray.h>
 #include <Foundation/NSBundle.h>
 #include <Foundation/NSCoder.h>
@@ -44,16 +42,12 @@
 #include <Foundation/NSKeyValueCoding.h>
 #include <Foundation/NSNotification.h>
 #include <AppKit/NSMenu.h>
-#include <AppKit/NSImage.h>
-#include <AppKit/NSSound.h>
 #include <AppKit/NSView.h>
 #include <AppKit/NSTextView.h>
 #include <AppKit/NSWindow.h>
 #include <AppKit/NSNibLoading.h>
 #include <AppKit/NSNibConnector.h>
 #include <AppKit/NSApplication.h>
-#include <AppKit/NSTableColumn.h>
-#include <AppKit/NSTabViewItem.h>
 #include <GNUstepBase/GSObjCRuntime.h>
 #include <GNUstepGUI/GSNibTemplates.h>
 
